# rtf-filter

./: AUTHORS  ChangeLog  ChangeLog.rdoc  INSTALL  LICENSE  Makefile  Makefile.in  NEWS  README  README.rdoc  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  aux.cpp  aux.h  ccontrolword.cpp  ccontrolword.h  main.cpp  rtf.cpp  rtf.h
